--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ description = "AI-powered medical inventory checker using computer vision"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "transformers>=4.36.0",
-    "torch>=2.0.0",
+    "transformers>=4.45.0",
+    "torch>=2.0.0", 
     "torchvision>=0.15.0",
+    "qwen-vl-utils>=0.0.8",
     "gradio>=4.0.0",
     "opencv-python>=4.8.0",
     "pillow>=10.0.0",
@@ -18,6 +19,7 @@ dependencies = [
     "accelerate>=0.25.0",
     "timm>=0.9.0",
     "spaces>=0.19.0",
+    "einops>=0.8.0",
 ]
 
 [build-system]
