--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-transformers>=4.36.0
+transformers>=4.45.0
 torch>=2.0.0
 torchvision>=0.15.0
+qwen-vl-utils>=0.0.8
 gradio>=4.0.0
 opencv-python>=4.8.0
 Pillow>=10.0.0
@@ -11,3 +12,4 @@ huggingface-hub>=0.19.0
 accelerate>=0.25.0
 timm>=0.9.0
 spaces>=0.19.0
+einops>=0.8.0
