--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ torch>=2.0.0
 torchvision>=0.15.0
 qwen-vl-utils>=0.0.8
 gradio>=4.0.0
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 Pillow>=10.0.0
 numpy>=1.24.0
 pandas>=2.0.0
