--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ timm>=0.9.0
 spaces>=0.19.0
 einops>=0.8.0
 # DINO dependencies - uses PyTorch for cosine similarity
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
