--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ einops>=0.8.0
 # DINO dependencies - uses PyTorch for cosine similarity
 scikit-learn>=1.3.0
 matplotlib>=3.7.0
+ultralytics>=8.0.0
