--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,11 @@ PyYAML>=6.0
 wandb>=0.15.0
 optuna>=3.0.0
 matplotlib>=3.7.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+redis>=5.0.0
+aioredis>=2.0.0
+sqlalchemy>=2.0.0
+websockets>=12.0
+python-multipart>=0.0.6
+pydantic>=2.0.0
