--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,91 @@
+# Core ML and AI frameworks
 transformers>=4.45.0
 torch>=2.0.0
 torchvision>=0.15.0
-qwen-vl-utils>=0.0.8
-gradio>=4.44.1
-opencv-python-headless>=4.8.0
-Pillow>=10.0.0
-numpy>=1.24.0
-pandas>=2.0.0
-scikit-image>=0.21.0
-huggingface-hub>=0.19.0
+torchaudio>=2.0.0
+ultralytics>=8.0.0
 accelerate>=0.25.0
 timm>=0.9.0
-spaces>=0.19.0
+qwen-vl-utils>=0.0.8
 einops>=0.8.0
-# DINO dependencies - uses PyTorch for cosine similarity
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-ultralytics>=8.0.0
-PyYAML>=6.0
-wandb>=0.15.0
-optuna>=3.0.0
-matplotlib>=3.7.0
+huggingface-hub>=0.19.0
+
+# Computer Vision
+opencv-python-headless>=4.8.0
+Pillow>=10.0.0
+albumentations>=1.3.0
+imgaug>=0.4.0
+scikit-image>=0.21.0
+
+# API and Web Framework
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+gunicorn>=21.0.0
+websockets>=12.0
+gradio>=4.44.1
+python-multipart>=0.0.6
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+
+# Data Processing
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
+scipy>=1.10.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.11.0
+psycopg2-binary>=2.9.6
 redis>=5.0.0
 aioredis>=2.0.0
-sqlalchemy>=2.0.0
-websockets>=12.0
-python-multipart>=0.0.6
+asyncpg>=0.28.0
+
+# Async support
+asyncio-mqtt>=0.13.0
+aiofiles>=23.0.0
+httpx>=0.24.0
+
+# Configuration and Environment
 pydantic>=2.0.0
-seaborn>=0.12.0
+python-dotenv>=1.0.0
+PyYAML>=6.0
+toml>=0.10.2
+
+# Monitoring and Logging
+prometheus-client>=0.17.0
+structlog>=23.0.0
+python-json-logger>=2.0.7
+sentry-sdk[fastapi]>=1.28.0
 psutil>=5.9.0
 GPUtil>=1.4.0
+
+# Model Optimization
+onnx>=1.14.0
+onnxruntime-gpu>=1.15.0
+
+# Hyperparameter Optimization
+optuna>=3.0.0
+wandb>=0.15.0
+mlflow>=2.5.0
+
+# Utilities
+tqdm>=4.65.0
+rich>=13.4.0
+typer>=0.9.0
+click>=8.1.0
+spaces>=0.19.0
+
+# Development and Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
+mypy>=1.4.0
+
+# Production WSGI server
+gevent>=23.0.0
